p2/confs/k3s/irc-chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: irc-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: irc-chat
  template:
    metadata:
      labels:
        app: irc-chat
    spec:
      containers:
      - name: irc-chat
        image: thelounge/thelounge:latest
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: user-config
          mountPath: /var/opt/thelounge/users
      volumes:
      - name: user-config
        emptyDir: {}
      - name: irc-conf
        hostPath:
          path: /irc-conf/
      - name: secret-pbeheyt
        secret:
          secretName: pbeheyt-pass
      - name: secret-rlouvrie
        secret:
          secretName: rlouvrie-pass
