p2/confs/k3s/game-2048-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048-service
spec:
  type: ClusterIP
  selector:
    app: game-2048
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
