p2/confs/k3s/game-tetris-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-tetris-service
spec:
  type: ClusterIP
  selector:
    app: game-tetris
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
