p2/confs/k3s/irc-chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: irc-chat-service
spec:
  type: LoadBalancer
  selector:
    app: irc-chat
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
    nodePort: 30000
