p2/confs/k3s/iot-local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-local-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:

  ingressClassName: nginx
  defaultBackend:
    service:
      name: irc-chat-service
      port:
        number: 9000

  rules:
  - host: 2048.iot.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-2048-service
            port:
              number: 80

  - host: tetris.iot.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-tetris-service
            port:
              number: 80

  - host: chat.iot.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: irc-chat-service
            port:
              number: 9000
